--- a/app.config
+++ b/app.config
@@ -17,10 +17,10 @@
                 <value>True</value>
             </setting>
             <setting name="UseThread" serializeAs="String">
-                <value>2</value>
+                <value>1</value>
             </setting>
             <setting name="TransTableSize" serializeAs="String">
-                <value>992</value>
+                <value>64</value>
             </setting>
             <setting name="UseAlphaBeta" serializeAs="String">
                 <value>True</value>
@@ -143,6 +143,9 @@
                 <value>0</value>
             </setting>
             <setting name="ChessHumanFactor" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SearchOptions" serializeAs="String">
                 <value>0</value>
             </setting>
         </SrcChess2.Properties.Settings>
